new feature: allow or not external access to a service
